test/testdata/classes/methods/property_accessors/write_only_error.lox
class Foo {
  static get bar() {}

  // error: write-only properties are not allowed
  // lint error: write-only properties are not allowed
  set bar(value) {
    this._bar = value;
  }
}

_ = Foo;
